--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
   buildToolsVersion "24.0.2"
   defaultConfig {
     applicationId "xyz.djy0.djyscreen"
-    minSdkVersion 14
+    minSdkVersion 16
     targetSdkVersion 24
     versionCode 1
     versionName "1.0"
@@ -17,6 +17,7 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+  productFlavors {}
 }
 
 dependencies {
